additional jumbotron styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!--Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Flo's Portfolio</title>
@@ -33,7 +33,6 @@
             <h1 class="display-4">My Portfolio</h1>
             <p class="lead">Welcome to Flo's Portfolio: A collection of all my projects!</p>
             <a class="btn btn-primary btn-lg" href="#" role="button">Click me</a>
-            </div>
         </div>
          <!-- End jumbotron -->
     </main>
