--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </nav>
         <!-- End Navbar -->
     </header>
-    <main>
+    <section class="hero">
         <!-- Jumbotron -->
         <div class="jumbotron">
             <h1 class="display-4">My Portfolio</h1>
@@ -35,9 +35,63 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Click me</a>
         </div>
          <!-- End jumbotron -->
+    </section>
+    <main>
+        <h1>My projects</h1>
+         <!-- Cards -->
+  <div class="container-fluid content">
+    <div class="row">
+
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+          <img src="images/test.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Visit</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 1 -->
+
+      <!-- Card 2 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+          <img src="images/test.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Visit</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 2 -->
+
+      <!-- Card 3 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+          <img src="images/test.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Visit</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 3 -->
+
+    </div>
+  </div>
+  <!-- End cards -->
     </main>
-    <h1>Text</h1>
-    <!--Bootstrap JS-->
+    <footer>
+            <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/" title="Bootstrap">Do you want to know more about Bootstrap?</a>
+    </footer>   
+        <!--Bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
