--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
-                <a class="nav-item nav-link" href="#">Pricing</a>
+                <a class="nav-item nav-link" href="#projects">Projects</a>
+                <a class="nav-item nav-link" href="#about">About me</a>
               </div>
             </div>
           </nav>
         <!-- End Navbar -->
     </header>
+
     <section class="hero">
         <!-- Jumbotron -->
         <div class="jumbotron">
@@ -36,10 +37,13 @@
         </div>
          <!-- End jumbotron -->
     </section>
+
     <main>
-        <h1>My projects</h1>
+        <div class="title">
+            <h1 id="projects">My projects</h1>
+        </div>
          <!-- Cards -->
-  <div class="container-fluid content">
+  <div class="container-fluid">
     <div class="row">
 
       <!-- Card 1 -->
@@ -47,9 +51,9 @@
         <div class="card">
           <img src="images/test.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <h5 class="card-title">Module 1 Challenge</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis adipisci cumque consequatur iure itaque impedit laboriosam possimus inventore!
+            </p>
             <a href="#" class="btn btn-primary">Visit</a>
           </div>
         </div>
@@ -61,9 +65,8 @@
         <div class="card">
           <img src="images/test.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <h5 class="card-title">Module 2 Challenge</h5>
+            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga obcaecati minus quaerat perferendis facere reprehenderit ipsum eaque, fugiat natus illo!</p>
             <a href="#" class="btn btn-primary">Visit</a>
           </div>
         </div>
@@ -75,9 +78,8 @@
         <div class="card">
           <img src="images/test.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <h5 class="card-title">Module 3 Challenge</h5>
+            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo numquam nostrum perspiciatis deleniti ipsam, dicta debitis iusto excepturi consequatur porro?</p>
             <a href="#" class="btn btn-primary">Visit</a>
           </div>
         </div>
@@ -88,6 +90,12 @@
   </div>
   <!-- End cards -->
     </main>
+    <section class="about">
+        <div class="title">
+        <h2 id="about">About me</h2>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore saepe aliquid deserunt soluta. Ullam dolorem fuga facilis, recusandae laudantium a facere unde aut quas provident praesentium, delectus amet neque quibusdam fugit maxime ut eaque molestiae? Distinctio, corporis saepe incidunt suscipit mollitia labore officiis natus accusantium ut veritatis at facilis nobis. Eveniet est animi nemo ullam, nam modi ad amet dicta placeat hic quam tempora, voluptate vero ducimus. Officiis nobis quisquam quidem blanditiis, amet, ipsum eum corporis totam error inventore ab sapiente fugiat voluptas incidunt sunt odio laborum magni nostrum ullam maxime iste sequi quia repellat praesentium. Nisi inventore fuga mollitia maxime sint magnam voluptas quasi facilis fugit reprehenderit quidem alias, quis et expedita animi vel accusamus, libero totam iste dolor sunt error cumque dolore? Laudantium enim, vero dolor facilis quo fugiat modi corporis nesciunt laborum culpa! Molestiae ad nesciunt suscipit dignissimos aut, quasi, excepturi, distinctio laborum nihil quia consectetur beatae!</p>
+    </section>
     <footer>
             <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/" title="Bootstrap">Do you want to know more about Bootstrap?</a>
     </footer>   
