added skills section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#projects">Projects</a>
+                <a class="nav-item nav-link" href="#skills">Skills</a>
                 <a class="nav-item nav-link" href="#about">About me</a>
               </div>
             </div>
@@ -33,7 +34,7 @@
         <div class="jumbotron">
             <h1 class="display-4">My Portfolio</h1>
             <p class="lead">Welcome to Flo's Portfolio: A collection of all my projects!</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Click me</a>
+            <a class="btn btn-primary btn-lg" href="#projects" role="button">Click me</a>
         </div>
          <!-- End jumbotron -->
     </section>
@@ -90,12 +91,23 @@
   </div>
   <!-- End cards -->
     </main>
+
+      <!-- Skills -->
+      <section class="skills">
+        <div class="title">
+        <h2 id="skills">Skills</h2>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore saepe aliquid deserunt soluta. Ullam dolorem fuga facilis, recusandae laudantium a facere unde aut quas provident praesentium, delectus amet neque quibusdam fugit maxime ut eaque molestiae? Distinctio, corporis saepe incidunt suscipit mollitia labore officiis natus accusantium ut veritatis at facilis nobis. Eveniet est animi nemo ullam, nam modi ad amet dicta placeat hic quam tempora, voluptate vero ducimus. Officiis nobis quisquam quidem blanditiis, amet, ipsum eum corporis totam error inventore ab sapiente fugiat voluptas incidunt sunt odio laborum magni nostrum ullam maxime iste sequi quia repellat praesentium. Nisi inventore fuga mollitia maxime sint magnam voluptas quasi facilis fugit reprehenderit quidem alias, quis et expedita animi vel accusamus, libero totam iste dolor sunt error cumque dolore? Laudantium enim, vero dolor facilis quo fugiat modi corporis nesciunt laborum culpa! Molestiae ad nesciunt suscipit dignissimos aut, quasi, excepturi, distinctio laborum nihil quia consectetur beatae!</p>
+    </section>
+
+      <!-- About -->
     <section class="about">
         <div class="title">
         <h2 id="about">About me</h2>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore saepe aliquid deserunt soluta. Ullam dolorem fuga facilis, recusandae laudantium a facere unde aut quas provident praesentium, delectus amet neque quibusdam fugit maxime ut eaque molestiae? Distinctio, corporis saepe incidunt suscipit mollitia labore officiis natus accusantium ut veritatis at facilis nobis. Eveniet est animi nemo ullam, nam modi ad amet dicta placeat hic quam tempora, voluptate vero ducimus. Officiis nobis quisquam quidem blanditiis, amet, ipsum eum corporis totam error inventore ab sapiente fugiat voluptas incidunt sunt odio laborum magni nostrum ullam maxime iste sequi quia repellat praesentium. Nisi inventore fuga mollitia maxime sint magnam voluptas quasi facilis fugit reprehenderit quidem alias, quis et expedita animi vel accusamus, libero totam iste dolor sunt error cumque dolore? Laudantium enim, vero dolor facilis quo fugiat modi corporis nesciunt laborum culpa! Molestiae ad nesciunt suscipit dignissimos aut, quasi, excepturi, distinctio laborum nihil quia consectetur beatae!</p>
     </section>
+
     <footer>
             <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/" title="Bootstrap">Do you want to know more about Bootstrap?</a>
     </footer>   
